Perkin-UAT/force-app/main/default/objects/Promotion__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF( End_Date__c  &gt;  TODAY() , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Text</type>
</CustomField>