Perkin-UAT/force-app/main/default/objects/Promotion__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <description>The person to whom to refer questions, issues or concerns.</description>
    <inlineHelpText>Contact this person for answers to any questions, issues or concerns.</inlineHelpText>
    <label>Contact Person</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>