Perkin-UAT/force-app/main/default/objects/Promotion__c/fields/Contact_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Telephone__c</fullName>
    <label>Contact Telephone:</label>
    <type>Phone</type>
</CustomField>