Perkin-UAT/force-app/main/default/objects/Promotion__c/fields/Discount_by__c.field-meta.xml
<CustomField>
    <fullName>Discount_by__c</fullName>
    <inlineHelpText>Select the way qualifying items will be referenced.
(Part Number, Igor/PAC Code etc)</inlineHelpText>
    <label>Discount by:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Part number</fullName>
            </value>
            <value>
                <fullName>IGOR/PAC Code</fullName>
            </value>
            <value>
                <fullName>Product Line + Item Category</fullName>
            </value>
            <value>
                <fullName>Material Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>