Perkin-UAT/force-app/main/default/objects/Promotion__c/fields/Discount_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Discount_Calculation__c</fullName>
    <inlineHelpText>Examples:
-10%
-$5,000 – this MUST be accompanied by a value for each country, in local currency, where the promotion applies.
-10% for the first 4, -15% for 5-9, -20% for 10 and above.</inlineHelpText>
    <label>Discount Calculation</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>