Perkin-UAT/force-app/main/default/objects/Promotion__c/fields/Last_Standard_Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Standard_Quote_Date__c</fullName>
    <formula>End_Date__c  - 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a calculated date based on the standard 30 day validity of normal quotations.</inlineHelpText>
    <label>Last Standard Quote Date</label>
    <type>Date</type>
</CustomField>