Perkin-UAT/force-app/main/default/objects/Promotion__c/fields/Other_Promotions_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Other_Promotions_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked more than one discount may be applied to the item.</inlineHelpText>
    <label>Other Promotions Allowed</label>
    <type>Checkbox</type>
</CustomField>