Perkin-UAT/force-app/main/default/objects/Promotion__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AA	Atomic absorption</fullName>
            </value>
            <value>
                <fullName>ABI	Applied biosystems</fullName>
            </value>
            <value>
                <fullName>AGT	Agilent technologies</fullName>
            </value>
            <value>
                <fullName>AIG	Analytical general</fullName>
            </value>
            <value>
                <fullName>ANP	Analytical proteomics</fullName>
            </value>
            <value>
                <fullName>APS	Application systems</fullName>
            </value>
            <value>
                <fullName>AWS	Automated workstations</fullName>
            </value>
            <value>
                <fullName>CKP	Cellular kinetic photoproteins</fullName>
            </value>
            <value>
                <fullName>CSA	Cellular screening &amp; ADME</fullName>
            </value>
            <value>
                <fullName>DIA	Diagnostics</fullName>
            </value>
            <value>
                <fullName>DIS	Distributor products / other</fullName>
            </value>
            <value>
                <fullName>ESS	Enterprise software solutions</fullName>
            </value>
            <value>
                <fullName>FGP	Functional genomics &amp; proteomics</fullName>
            </value>
            <value>
                <fullName>GC	Gas chromatography</fullName>
            </value>
            <value>
                <fullName>HCS	High content screening</fullName>
            </value>
            <value>
                <fullName>HTS	Drug discovery reagents</fullName>
            </value>
            <value>
                <fullName>IAS	Imaging &amp; analysis soln</fullName>
            </value>
            <value>
                <fullName>ICP	ICP-OES</fullName>
            </value>
            <value>
                <fullName>IR	IR spectroscopy</fullName>
            </value>
            <value>
                <fullName>LC	Liquid chromatography</fullName>
            </value>
            <value>
                <fullName>LVI	Live cell proteomics</fullName>
            </value>
            <value>
                <fullName>MAS	ICP-MS</fullName>
            </value>
            <value>
                <fullName>MDX	Molecular diagnostics</fullName>
            </value>
            <value>
                <fullName>MLD	Multi-label detection</fullName>
            </value>
            <value>
                <fullName>MOL	Research reagents</fullName>
            </value>
            <value>
                <fullName>NEO	Neonatal</fullName>
            </value>
            <value>
                <fullName>OMV	Other multi vendor</fullName>
            </value>
            <value>
                <fullName>PBR	Protein biology reagents</fullName>
            </value>
            <value>
                <fullName>PCL	Photina cell lines</fullName>
            </value>
            <value>
                <fullName>PGI	Proteomics &amp; genomics instruments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>