Perkin-UAT/force-app/main/default/objects/Promotion__c/fields/Promotion_Description__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Description__c</fullName>
    <description>A full description of what the Account Managers need to know about the promotion and how to offer it.</description>
    <label>Promotion Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>