Perkin-UAT/force-app/main/default/objects/Promotion__c/fields/Promotion_Number__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Number__c</fullName>
    <inlineHelpText>The number should be of the format:
Product Line + Financial Quarter (2 digits) + Year (last 2 digits) + 2 Digit incremental Number
Example: ICP020714</inlineHelpText>
    <label>Promotion Number</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>