Perkin-UAT/force-app/main/default/objects/Promotion__c/fields/Qualifying_Items__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Items__c</fullName>
    <inlineHelpText>Add all Part Numbers / IGOR/PAC Codes / Item Categories which qualify for the discount.</inlineHelpText>
    <label>Qualifying Items</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>