Perkin-UAT/force-app/main/default/objects/Promotion__c/fields/Requires_Managerial_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Managerial_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked the promotion cannot be applied without going through the AM’s manager for approval.</inlineHelpText>
    <label>Requires Managerial Approval</label>
    <type>Checkbox</type>
</CustomField>