Perkin-UAT/force-app/main/default/objects/Promotion__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date on which the promotion is due to start. It defaults to the date the promotion is created.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>