Perkin-UAT/force-app/main/default/objects/Promotion__c/fields/Variable_Discount_Level__c.field-meta.xml
<CustomField>
    <fullName>Variable_Discount_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the discount may be applied on an Up-to basis up to a maximum level detailed in the Discount Calculation field.</inlineHelpText>
    <label>Variable Discount Level</label>
    <type>Checkbox</type>
</CustomField>